--- a/02_data_statistics.Rmd
+++ b/02_data_statistics.Rmd
@@ -60,7 +60,7 @@ data_stats %>%
                     breaks=c("low_quality","mapped_SceUnd","unmapped_reads","mapped_mags"),
                     labels=c("Low quality","Mapped to host","Unmapped","Mapped to MAGs"),
                     values=c("#CCCCCC", "#bcdee1", "#d8b8a3","#93655c"))+
-      facet_wrap(~tissue, scales = "free", labeller = labeller(tissue = c(cloaca="Cloaca",feces="Faeces"))) +
+      facet_wrap(~tissue, scales = "free", labeller = labeller(tissue = c(cloaca="Cloaca",feces="Feces"))) +
       theme_minimal() +
       labs(y="DNA sequence fraction",x="Samples")
 ```
@@ -97,7 +97,7 @@ data_stats %>%
                     breaks=c("mag_proportion","singlem_read_fraction"),
                     labels=c("Recovered","Estimated"),
                     values=c("#52e1e8", "#876b53"))+
-      facet_wrap(tissue~., scales = "free", labeller = labeller(tissue = c(cloaca="Cloaca",feces="Faeces"))) +
+      facet_wrap(tissue~., scales = "free", labeller = labeller(tissue = c(cloaca="Cloaca",feces="Feces"))) +
       theme_minimal() +
       labs(y = "Samples", x = "Prokaryotic fraction") +
       scale_x_continuous(limits = c(0, 1)) +
