--- a/index.Rmd
+++ b/index.Rmd
@@ -56,6 +56,8 @@ library(knitr)
 library(tidyverse)
 library(devtools)
 library(tinytable)
+library(broom)
+library(broom.mixed)
 
 # For tree handling
 library(ape)
